Closed Bug 596506 Opened 15 years ago Closed 15 years ago

Going to end of line using Ctrl-e on Mac (or End on Linux/Windows) positions caret after newline in textareas

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- final+

People

(Reporter: bzbarsky, Assigned: ehsan.akhgari)

References

Details

(Keywords: dogfood)

Attachments

(1 file)

BUILD: 2010-09-14 nightly STEPS TO REPRODUCE: 1) Load "data:text/html,<textarea>" in your browser. 2) Focus the textarea and type "First" 3) Hit enter 4) Type "Second" 6) Use the arrow keys to position the caret before the 'F' in "First". 7) Hit Ctrl-e 8) Type "ly" EXPECTED RESULTS: Textarea looks like this: Firstly Second ACTUAL RESULTS: Textarea looks like this: First lySecond Additional information: On Mac, the "end" key doesn't go to end of line, as far as I can see. But on Windows and Linux I seem to recall that it does, and those may reproduce the bug that way too. Given that this worked in yesterday's builds, I assume this is a regression from bug 240933.
This has been a pretty major annoyance since updating to this build, fwiw.
blocking2.0: --- → ?
I can also reproduce this on Linux by substituting step 7 with "Hit <end>". Mozilla/5.0 (X11; Linux x86_64; rv:2.0b7pre) Gecko/20100914 Firefox/4.0b7pre
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #475624 - Flags: review?(roc)
Comment on attachment 475624 [details] [diff] [review] Patch (v1) r=me
Attachment #475624 - Flags: review?(roc) → review+
blocking2.0: ? → final+
Keywords: dogfood
OS: Mac OS X → All
Hardware: x86 → All
Summary: Going to end of line using Ctrl-e on Mac positions caret after newline in textareas → Going to end of line using Ctrl-e on Mac (or End on Linux/Windows) positions caret after newline in textareas
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b7
Blocks: 596752
No longer blocks: 596752
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: